Small text changes

--- a/flixplorer/flixplorer.html
+++ b/flixplorer/flixplorer.html
@@ -58,8 +58,8 @@
 <template name="footer">
 <div>
     <p class='middle'>
-        Flixplorer display first 110 photos from today's flickr Explore list. Developed using <a href='http://meteor.com' target="_blank">Project Meteor</a><br/>
-        Flixplore is developed by some sleepless guys at <a href='http://leevio.com' target="_blank">Leevio</a>, Fork it in <a href='' target="_blank">Github</a>
+        Flixplorer displays first 110 photos from today's flickr Explore list. Developed using <a href='http://meteor.com' target="_blank">Project Meteor</a><br/>
+        Flixplore is developed by some sleepless guys at <a href='http://leevio.com' target="_blank">Leevio</a>, Fork it in <a href='https://github.com/hasinhayder/Flixplore' target="_blank">Github</a>
 
     </p>
 </div>
