Small text and css change

--- a/flixplorer/flixplorer.html
+++ b/flixplorer/flixplorer.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="column grid_12">
             <p class="left">
-                Right click to open in Flickr
+                Right click to open in Flickr, don't forget to left click as well.
             </p>
         </div>
     </div>
