Small text and css change

--- a/flixplorer/flixplorer.html
+++ b/flixplorer/flixplorer.html
@@ -49,7 +49,7 @@
                      data-src="http://farm{{data.farm}}.staticflickr.com/{{data.server}}/{{data.id}}_{{data.secret}}_z.jpg"
                      data-ownername="{{data.ownername}}"
                      data-title="{{data.title}}"
-                     data-owner="{{data.owner}}">
+                     data-owner="{{data.owner}}"/>
             </a>
         </li>
         {{/each}}
@@ -59,7 +59,7 @@
 <div>
     <p class='middle'>
         Flixplorer displays first 110 photos from today's flickr Explore list. Developed using <a href='http://meteor.com' target="_blank">Project Meteor</a><br/>
-        Flixplore is developed by some sleepless guys at <a href='http://leevio.com' target="_blank">Leevio</a>, Fork it in <a href='https://github.com/hasinhayder/Flixplore' target="_blank">Github</a>
+        Flixplorer is developed by some sleepless guys at <a href='http://leevio.com' target="_blank">Leevio</a>, Fork it in <a href='https://github.com/hasinhayder/Flixplore' target="_blank">Github</a>
 
     </p>
 </div>
